@@ -1,3 +1,8 @@
+Sun Jun  1 12:47:37 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3057
+
 Tue May 27 21:36:22 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
